fix sonar qube issues